--- a/frontend/src/app/components/workerCard/worker.scss
+++ b/frontend/src/app/components/workerCard/worker.scss
@@ -7,15 +7,17 @@
   border-radius: 1.875rem;
   background: #e6e6e6;
   padding-left: 30px;
-  font-family: "MyriadPro-r";
+  font-family: 'MyriadPro-r';
 }
 
 .circle {
+  height: 18px;
   padding-top: 10px;
-  padding-left: 340px;
+  padding-left: 330px;
 }
 
 .delete {
+  height: 18px;
   padding-bottom: 10px;
-  padding-left: 335px;
+  padding-left: 330px;
 }
