--- a/frontend/src/app/components/workerCard/worker.component.html
+++ b/frontend/src/app/components/workerCard/worker.component.html
@@ -1,10 +1,6 @@
-<div class="employe">
-    <svg class="circle" width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="9.5" cy="9" r="9" fill="black"/>
-    </svg>
-    <span>A-55 Спицын Анатолий Андреевич</span>
-    <span>Занято</span>
-    <svg class="delete" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M7.5 21C6.95 21 6.47917 20.8042 6.0875 20.4125C5.69583 20.0208 5.5 19.55 5.5 19V6H4.5V4H9.5V3H15.5V4H20.5V6H19.5V19C19.5 19.55 19.3042 20.0208 18.9125 20.4125C18.5208 20.8042 18.05 21 17.5 21H7.5ZM17.5 6H7.5V19H17.5V6ZM9.5 17H11.5V8H9.5V17ZM13.5 17H15.5V8H13.5V17Z" fill="#1D1B20"/>
-    </svg>        
+<div class="P employe">
+  <img class="circle" src="public/dot.svg" />
+  <span>A-55 Спицын Анатолий Андреевич</span>
+  <span>Занято</span>
+  <img class="delete" src="public/delete.svg" alt="" />
 </div>
