--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -23,6 +23,18 @@ H1 {
     font-size: 60px;
 }
 
+.MP-R {
+    font-family: 'MyriadPro-r';
+}
+
+.MP-SB {
+    font-family: 'MyriadPro-sb';
+}
+
+.MP-B {
+    font-family: 'MyriadPro-b';
+}
+
 tui-root {
     position: relative;
     display: block;
