изменена иконка мусорного ведра

--- a/frontend/src/app/components/workerCard/worker.component.html
+++ b/frontend/src/app/components/workerCard/worker.component.html
@@ -2,5 +2,5 @@
   <img class="circle" src="public/dot.svg" />
   <span>A-55 Спицын Анатолий Андреевич</span>
   <span>Занято</span>
-  <img class="delete" src="public/delete.svg" alt="" />
+  <img class="delete" alt="" [src]="'@tui.trash' | tuiIcon" />
 </div>
