--- a/frontend/src/app/components/workerCard/worker.component.html
+++ b/frontend/src/app/components/workerCard/worker.component.html
@@ -1,6 +1,6 @@
 <div class="P employe">
   <img class="circle" src="public/dot.svg" />
-  <span>A-55 Спицын Анатолий Андреевич</span>
+  <span>{{currentWorkspace.workspaceName}} {{currentWorkspace.fullWorkerName}}</span>
   <span>Занято</span>
   <img class="delete" alt="" [src]="'@tui.trash' | tuiIcon" />
 </div>
