Приложение переведено на глобальные стили

--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -29,14 +29,14 @@
         </svg>
     </a>
     <div class="header-buttons">
-        <a class="header-button">Кнопка меню 1</a>
+        <a class="H3 MP-R header-button">Кнопка меню 1</a>
         |
-        <a class="header-button">Кнопка меню 2</a>
+        <a class="H3 MP-R header-button">Кнопка меню 2</a>
     </div>
     <div class="search-container">
         <app-search class="search" />
     </div>
-    <button (click)="authOrLogout()" class="admin-button">
+    <button (click)="authOrLogout()" class="P MP-R admin-button">
         @if(isAuthenticated){
             <tui-icon icon="@tui.user"/>
             <p>Выйти</p>
