--- a/frontend/src/app/components/searchBar/search.html
+++ b/frontend/src/app/components/searchBar/search.html
@@ -9,6 +9,7 @@
     </div>
     }
     <input
+      class="P MP-R"
       *ngIf="isSearchVisible"
       type="text"
       [(ngModel)]="searchTerm"
