--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -1,23 +1,23 @@
-<div class="card" tuiAppearance="floating" tuiCardLarge>
+<div class="MP-R card" tuiAppearance="floating" tuiCardLarge>
     <div class="scroll-card">
-        <div class="card-header" tuiHeader>
-            <h2 tuiTitle>{{data.officeName}}</h2>
+        <div class="MP-R card-header" tuiHeader>
+            <span class="H1 MP-R name" tuiTitle>{{data.officeName}}</span>
         </div>
 
         <section class="card-container">
-            <div class="card-info address">
+            <div class="P MP-R card-info address">
                 {{data.city}}<br>
                 <span>{{data.address}}</span>
             </div>
             <hr>
-            <div class="card-info">Свободных мест: {{data.totalWorkspace - data.occupiedWorkspaces}} /
+            <div class="P MP-R card-info">Свободных мест: {{data.totalWorkspace - data.occupiedWorkspaces}} /
                 {{data.totalWorkspace}}</div>
-            <div class="card-info">Плотность посадки: {{data.density}} м²</div>
+            <div class="P MP-R card-info">Плотность посадки: {{data.density}} м²</div>
         </section>
     </div>
 
-    <div class="card-footer">
-        <img src="{{data.imageUrl}}" alt="Офис">
+    <div class="P MP-R card-footer">
+        <img src="{{data.imageUrl}}" alt="">
         <a (click)="goToOffice(id())" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
             К офису
         </a>
