--- a/frontend/src/app/components/card/card.scss
+++ b/frontend/src/app/components/card/card.scss
@@ -18,7 +18,7 @@
     box-shadow: 4px 4px 8px 0px rgba(11, 45, 65, 0.21);
     flex: 1;
     --t-space: 1rem;
-    --tui-font-heading-5: bold 1.5rem / 1.75rem "MyriadPro-eb";
+    --tui-font-heading-5: 2.5rem / 1.75rem "MyriadPro-r";
     --tui-text-primary: white;
     --tui-text-action: white;
     --tui-border-normal: white;
@@ -37,14 +37,10 @@
         justify-content: center;
         align-items: center;
         gap: 0.625rem;
+        padding-bottom: 15px;
 
-        h2 {
-            font-family: "MyriadPro-eb";
+        .name {
             color: white;
-            font-size: 2.5rem;
-            font-style: normal;
-            font-weight: 400;
-            line-height:  2.6rem;
         }
     }
 
@@ -65,10 +61,7 @@
         }
 
         .card-info {
-            font-family: "MyriadPro-r";
-            font-size: 1.125rem;
             font-style: normal;
-            font-weight: 400;
             line-height: normal;
             display: flex;
             flex-direction: column;
