Убрал svg заднего фона регистрации и авторизации в отдельный файл

--- a/frontend/src/app/pages/login/login.scss
+++ b/frontend/src/app/pages/login/login.scss
@@ -89,6 +89,11 @@ form {
   word-wrap: break-word;
 }
 
+.back {
+  height: 200%;
+  width: 200%;
+}
+
 @media (max-width: 768px) {
   .container {
     padding: 2rem;
