--- a/frontend/src/app/components/modalWindow/modalWindow.scss
+++ b/frontend/src/app/components/modalWindow/modalWindow.scss
@@ -89,8 +89,18 @@
   padding-left: 20px;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .clear {
-  color: rgba(156, 65, 65, 1);
+  color: #9C4141;
+  padding-left: 5px;
+}
+
+.save {
+  color: #419C41;
   padding-left: 5px;
 }
 
@@ -116,4 +126,21 @@
   --tui-background-accent-1: black;
   --tui-background-base: white;
   --tui-padding-l: 1rem;
+}
+
+.heading {
+  padding: 1rem;
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.click {
+  cursor: pointer;
+}
+
+.scroll {
+  block-size: 8.5rem;
 }
