--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -29,9 +29,9 @@
         </svg>
     </a>
     <div class="header-buttons">
-        <a class="H3 MP-R header-button">Кнопка меню 1</a>
+        <a href="workers" class="H3 MP-R header-button">Все сотрудники</a>
         |
-        <a class="H3 MP-R header-button">Кнопка меню 2</a>
+        <a href="worker/create" class="H3 MP-R header-button">Создать сотрудника</a>
     </div>
     <div class="search-container">
         <app-search class="search" />
