--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -10,7 +10,7 @@
                 <span>{{data.address}}</span>
             </div>
             <hr>
-            <div class="P MP-R card-info">Свободных мест: {{data.totalWorkspace - data.occupiedWorkspaces}} /
+            <div class="P MP-R card-info">Свободных мест: {{data.freeWorkspaces}} /
                 {{data.totalWorkspace}}</div>
             <div class="P MP-R card-info">Плотность посадки: {{data.density}} м²</div>
         </section>
