fixed office page

--- a/frontend/src/app/pages/offices/office/office.component.html
+++ b/frontend/src/app/pages/offices/office/office.component.html
@@ -1,61 +1,58 @@
 @if (isLoading) {
-  <app-loading />
+<app-loading />
 } @else {
-  <div class="container">
-    <div class="office-info">
-      <h1 class="H2 MB-SB name">Информация</h1>
-      <hr class="office-info-line" />
-      <div class="P MB-B info">
-        {{ dataOffice.officeName }}
-      </div>
-      <hr class="office-info-line" />
-      <div class="P MB-B info">Адрес: {{ dataOffice.address }}</div>
-      <hr class="office-info-line" />
-      <div class="P MB-B info">
-        <!-- Здесь должна быть информация о Floor -->
-        @if (paginatedFloor) {
-          <div class="P MB-B info-text">
-            Кабинеты:
-            <span class="span-number">{{
-              paginatedFloor.rooms?.length || 0
-            }}</span>
-          </div>
-          <div class="P MB-B info-text">
-            Рабочие места:
-            <span class="span-number">{{
-              paginatedFloor.totalWorkspace || 0
-            }}</span>
-          </div>
-          <div class="P MB-B info-text">
-            Кол-во сотрудников: <span class="span-number">0</span>
-          </div>
-          <div class="P MB-B info-text">
-            Свободных мест:
-            <span class="span-number">{{
-              paginatedFloor.totalWorkspace || 0
-            }}</span>
-          </div>
-          <div class="P MB-B info-text">
-            Забронированные места: <span class="span-number">2</span>
-          </div>
-        }
-        <!-- Здесь конец информации -->
-        @if (totalFloors > 1) {
-          <div class="pagination">
-            <tui-pagination
-              [index]="currentPage"
-              [length]="totalFloors"
-              (indexChange)="onPageChange($event)">
-            </tui-pagination>
-          </div>
-        }
-        <button tuiButton size="m" type="button">Создать отчет</button>
-      </div>
+<div class="container">
+  <div class="office-info">
+    <h1 class="H2 MB-SB name">Информация</h1>
+    <hr class="office-info-line" />
+    <div class="P MB-B info">
+      {{ dataOffice.officeName }}
     </div>
-    <div class="office-image">
+    <hr class="office-info-line" />
+    <div class="P MB-B info">Адрес: {{ dataOffice.address }}</div>
+    <hr class="office-info-line" />
+    <div class="P MB-B info">
+      <!-- Здесь должна быть информация о Floor -->
       @if (paginatedFloor) {
-        <app-floor-schema [floorInfo]="paginatedFloor"></app-floor-schema>
+      <div class="P MB-B info-text">
+        Кабинеты:
+        <span class="span-number">{{
+          paginatedFloor.rooms.length || 0
+          }}</span>
+      </div>
+      <div class="P MB-B info-text">
+        Рабочие места:
+        <span class="span-number">{{
+          paginatedFloor.totalWorkspace || 0
+          }}</span>
+      </div>
+      <div class="P MB-B info-text">
+        Кол-во сотрудников: <span class="span-number">0</span>
+      </div>
+      <div class="P MB-B info-text">
+        Свободных мест:
+        <span class="span-number">{{
+          paginatedFloor.totalWorkspace || 0
+          }}</span>
+      </div>
+      <div class="P MB-B info-text">
+        Забронированные места: <span class="span-number">2</span>
+      </div>
       }
+      <!-- Здесь конец информации -->
+      @if (totalFloors > 1) {
+      <div class="pagination">
+        <tui-pagination [index]="currentPage" [length]="totalFloors" (indexChange)="onPageChange($event)">
+        </tui-pagination>
+      </div>
+      }
+      <button tuiButton size="m" type="button">Создать отчет</button>
     </div>
   </div>
+  <div class="office-image">
+    @if (paginatedFloor) {
+    <app-floor-schema [floorInfo]="paginatedFloor"></app-floor-schema>
+    }
+  </div>
+</div>
 }
